kubernetes/applications/ceph-storage/manifests/affine/affine-namespace.yml
# =====================================
# Namespace
# =====================================
apiVersion: v1
kind: Namespace
metadata:
  name: affine
