kubernetes/applications/ceph-storage/manifests/affine/affine-redis-service.yml

---
apiVersion: v1
kind: Service
metadata:
  name: affine-redis
  namespace: affine
spec:
  type: ClusterIP
  selector:
    app: affine-redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
