kubernetes/applications/ceph-storage/manifests/affine/affine-ingress.yml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: affine-ingress
  namespace: affine
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - affine.example.com
  rules:
    - host: affine.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: affine
                port:
                  number: 3010
